27 03 2025 add bulk for five lubs